chasetask/config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapplication
  labels:
    app: myapplication
spec:
  selector:
    matchLabels:
      app: myapplication
  template:
    metadata:
      labels:
        app: myapplication
    spec:
      containers:
      - name: myapplication-image
        image: myapplicatiom:tag 
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/keepalive
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/keepalive
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
