chasetask/config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapplication-service
spec:
  selector:
    app: myapplication  
  ports:
  - name: http-svc
    protocol: TCP
    port: 80
    targetPort: 8080
